--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Agency</title>
+  <link rel="icon" type="image/x-icon" href="./asset/icons/Favicon.png">
+<link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  
+  <header>
+    <div class="nav-container">
+      <div class="logo-container">
+        <img src="./asset/logo/logo.png" alt="">
+      </div>
+      <div class="menu-container">
+        <ul class="items">
+          <li class="item">Home</li>
+          <li class="item">Service</li>
+          <li class="item">About</li>
+          <li class="item">Contact</li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
+  <div class="banner-container">
+    <div class="banner-details">
+      <h1 class="banner-title"><span class="primary-color">Digital</span> Agency You<br>
+        Can Rely Upon !</h1>
+        <p class="p-desc">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
+        <div class="button">
+          <button class="btn-discover btn">DISCOVER MORE</button>
+          <button class="btn-hire btn">Hire US NOW</button>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
