--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Agency</title>
   <link rel="icon" type="image/x-icon" href="./asset/icons/Favicon.png">
-<link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
 </head>
+
 <body>
   <header>
     <div class="nav-container">
       <div class="logo-container">
-        <img src="./asset/logo/logo.png" alt="">
+        <a href="index.html"><img src="./asset/logo/logo.png" alt=""></a>
       </div>
       <div class="menu-container">
         <ul class="items">
@@ -29,12 +32,158 @@
     <div class="banner-details">
       <h1 class="banner-title"><span class="primary-color">Digital</span> Agency You<br>
         Can Rely Upon !</h1>
-        <p class="p-desc">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
-        <div class="button">
-          <button class="btn-discover btn">DISCOVER MORE</button>
-          <button class="btn-hire btn">Hire US NOW</button>
-        </div>
+      <p class="p-desc">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci
+        assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.</p>
+      <div class="button">
+        <button class="btn-discover btn">DISCOVER MORE</button>
+        <button class="btn-hire btn">Hire US NOW</button>
+      </div>
     </div>
   </div>
+
+  <div class="service-container">
+    <div class="service-left">
+      <div class="service-details">
+        <button class="btn service-btn">Service List</button>
+        <h1 class="service-title"><span class="primary-color">Services</span> We Can Help You With !</h1>
+        <p class="service-desc">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra libero
+          habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.</p>
+        <ul class="list-items">
+          <li class="list-item">Nobis ridiculus cupiditate egestas commodi.</li>
+          <li class="list-item">Ipsum dui curabitur dapibuish mollitia.</li>
+        </ul>
+        <div class="author-details">
+          <div class="author-img-desc">
+            <img class="author-img" src="./asset/image/author.jpg" alt="">
+            <h5 class="author-name">George Smith <br> <small>CEO, Director</small></h5>
+          </div>
+          <div class="more-details-btn">
+            <button class="btn details-btn">MORE DETAILS</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="service-right">
+      <div class="services">
+        <div class="service-up">
+          <div class="service">
+            <img class="service-logo" src="./asset/icons/coding.png" alt="">
+            <h3>Website Development</h3>
+          </div>
+          <div class="service">
+            <img class="service-logo" src="./asset/icons/bar-chart.png" alt="">
+            <h3>Graphic & Sketch Designing</h3>
+          </div>
+        </div>
+        <div class="service-down">
+          <div class="service">
+            <img class="service-logo" src="./asset/icons/startup.png" alt="">
+            <h3>SEO & Content Writing</h3>
+          </div>
+          <div class="service">
+            <img class="service-logo" src="./asset/icons/digital-marketing.png" alt="">
+            <h3>Digital Marketing Planning</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="appointment-section">
+    <div class="call">
+      <i class="fa-solid fa-phone call-icon"></i>
+      <div class="phone">
+        <p>GET A FREE CONSULTATION</p>
+        <h3>+880130458-689</h3>
+      </div>
+    </div>
+    <div class="appointment-desc">
+      <p>Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro
+        viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.</p>
+    </div>
+    <div class="appointment-btn"><button class="btn app-btn">MAKE APPOINTMENT</button></div>
+  </div>
+
+
+  <div class="blog-container">
+    <div class="blog-container-title">
+      <h1><span class="primary-color">Blog & News</span> From Us!</h1>
+    <p>Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! Non officiis, id natus non nisl provident justo.</p>
+    </div>
+    <div class="blogs">
+      <div class="blog-post">
+        <img src="./asset/image/b1.webp" alt="">
+        <h3>Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+      </div>
+      <div class="blog-post">
+        <img src="./asset/image/b2.webp" alt="">
+        <h3>Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+      </div>
+      <div class="blog-post">
+        <img src="./asset/image/b3.webp" alt="">
+        <h3>Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-container">
+    <div class="footer-items">
+      <div class="div1">
+        <img src="./asset/logo/logo.png" alt="">
+        <p>Auctor blandit dolorem primis eius odit soluta molestie? Malesuada elementum aut doloremque labo.</p>
+        <div class="footer-icons">
+
+         <a href="#"><i class="fa-brands fa-facebook icon"></i></a>
+         <a href="#"><i class="fa-brands fa-twitter icon"></i></a>
+         <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
+         <a href="#"><i class="fa-brands fa-youtube icon"></i></a>
+
+        </div>
+      </div>
+      <div class="div2">
+        <h3>Useful Links</h3>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">News & Artciles</a></li>
+          <li><a href="#">legal Notice</a></li>
+        </ul>
+      </div>
+      <div class="div3">
+        <h3>Supports</h3>
+        <ul>
+          <li><a href="#">Help Center</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Parent Community</a></li>
+        </ul>
+      </div>
+      <div class="div4">
+        <h3>Contact Information</h3>
+        <div class="sub-div4">
+          <p class="div4-subheading">Feel free to contact & reach us !!</p>
+          <div class="icon-text">
+            <i class="fa-solid fa-location-pin"></i>
+            <p>3557 Derek Drive, Orlando, Florida</p>
+          </div>
+          <div class="icon-text">
+            <i class="fa-solid fa-phone"></i>
+            <p>+1(456)657-887</p>
+          </div>
+          <div class="icon-text">
+            <i class="fa-solid fa-envelope"></i>
+            <p>info@domain.com</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <p class="copyright-text">Copyright &copy; 2022 Agence. All rights reserved.</p>
+  </div>
+
 </body>
+
 </html>
